[package]
name = "mitm"
version = "0.1.0"
authors = ["Monadic Cat <greenmonadcat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.22"
once_cell = "1.8.0"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
